codepkg/objects/Agency_Salary_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Salary Surveys</relationshipLabel>
        <relationshipName>Agency_Salary_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Admin_Rate__c</fullName>
        <label>Actual Admin Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>END_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsArchive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_End_Date_Less_Than_Today__c</fullName>
        <formula>IF( END_Date__c  &lt; TODAY() , True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is End Date Less Than Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACSID__c</fullName>
        <formula>Account__r.MACS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Effective_Date__c</fullName>
        <description>Store requested Effective Date from UI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_From_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revised From Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_as_Base_Rate_Count__c</fullName>
        <description>This field gives a count of Line item records that have the same as base rate</description>
        <label>Same as Base Rate Count</label>
        <summaryFilterItems>
            <field>Salary_Survey_Line_Items__c.WC_and_or_UI__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Salary_Survey_Line_Items__c.Agency_Salary_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unemployment_Insurance_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unemployment Insurance Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workers_Comp_Insurance_Rate__c</fullName>
        <label>Workers Comp Insurance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Agency Salary Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>END_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>External_Id__c</columns>
        <columns>Actual_Admin_Rate__c</columns>
        <columns>MACSID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MARS_Approval_queue_Agency_Salary_Survey</fullName>
        <columns>MACSID__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>END_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <label>Pending Review Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MARS_Approval_queue_Agency_Salary_Survey1</fullName>
        <filterScope>Queue</filterScope>
        <label>MARS Approval queue</label>
        <queue>MARS_Approval_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Salary Survey  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Salary Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>